12/27/11 create dev package
12/27/11 add concentration meter (model and view)
12/27/11 remove solute from solution when changing solute
12/26/11 fix "Saturated!" indicator for empty beaker
12/26/11 a little work on add/removeSolvent and add/removeSolute in model
12/26/11 fix dropper button, doesn't disable when beaker is full
12/26/11 move origin of dropper to hole that dispenses stock solution
12/26/11 replace ImmutableVector2D with Point2D for non-public fields
12/26/11 first pass at stock solution coming out of dropper (not aligned with dropper hole)
12/26/11 reorganize time-based portion of model
12/26/11 model of shaker dispensing solute
12/26/11 implement evaporation
12/26/11 add dropper dispensing solution to model
12/26/11 disable dropper when beaker is full (add disabled button to piccolo-phet image suite)
12/26/11 add solvent, drain solution as clock ticks
12/26/11 add clock to model
12/26/11 add solution in beaker
12/26/11 add precipitate on bottom of beaker
12/26/11 add "Saturated!" indicator
12/26/11 add solvent and "fluid" to model, make faucet outputs show fluid
12/26/11 add fluid coming out of faucets
12/22/11 add sim-sharing to evaporation control
12/22/11 add sim-sharing to faucet sliders
12/21/11 #3193, fix "flow rate" issue in FaucetNode. Delete adapter code workaround from beers-law-lab model.
12/21/11 add faucets model and view
12/21/11 add beaker model and view
12/21/11 define font sizes in constants class
12/21/11 add debug node for model properties
12/21/11 refine some controls
12/20/11 grabbed evaporation control from sugar-and-salt-solutions
12/20/11 add "Remove Solute" button
12/20/11 icons for shaker and dropper
12/20/11 add drag constraints for shaker and dropper
12/20/11 add drag constraint to MovableDragHandler
12/20/11 drag handler for shaker and dropper
12/20/11 model elements for shaker and dropper
12/20/11 add some sim-sharing support
12/20/11 add additional strings for 1st tab, for new features that were added